--- a/templates/bemvindo.html
+++ b/templates/bemvindo.html
@@ -1,4 +1,4 @@
-{{ define "welcome" }}
+{{ define "main-content" }}
       <h2>Bem-vindo!!</h2>
       <p>
         A barra lateral está sempre oculta por padrão e pode ser aberta com o botão de menu acima.
