--- a/templates/body.html
+++ b/templates/body.html
@@ -168,7 +168,7 @@
   <!-- Main Content -->
   <main class="container-fluid">
     <div class="card shadow-sm p-4">
-    {{ block "welcome" . }}{{ end }}
+    {{ block "main-content" . }}{{ end }}
   </main>
 
   <!-- Footer -->
