--- a/templates/register.html
+++ b/templates/register.html
@@ -1,4 +1,4 @@
-{{ define "content" }}
+{{ define "main-content" }}
 <div class="d-flex justify-content-center align-items-center" style="min-height: 85vh;">
   <div class="card shadow p-4" style="max-width: 500px; width: 100%;">
     <div class="text-center mb-4">
