--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,4 +1,4 @@
-{{ define "welcome" }}
+{{ define "main-content" }}
       <h2>Welcome!</h2>
       <p>
         The sidebar is always hidden by default and can be opened with the hamburger button above.
