--- a/templates/login.html
+++ b/templates/login.html
@@ -1,12 +1,32 @@
-{{ define "content" }}
-  <h2>Login</h2>
-  <form action="/login" method="POST">
-    <label>Email:</label><br>
-    <input type="email" name="email"><br><br>
-    <label>Password:</label><br>
-    <input type="password" name="password"><br><br>
-    <button type="submit">Login</button>
-  </form>
+{{ define "main-content" }}
+<div class="d-flex justify-content-center align-items-center" style="min-height: 85vh;">
+  <div class="card shadow p-4" style="max-width: 500px; width: 100%;">
+    <div class="text-center mb-4">
+      <!-- <div class="company-logo bg-primary bg-opacity-25 rounded-circle d-inline-flex align-items-center justify-content-center" style="width:48px; height:48px;">
+        <i class="bi bi-person-plus fs-4 text-primary"></i>
+      </div> -->
+      <h3 class="mt-2">Login into your Account</h3>
+      <p class="text-muted mb-0">Fill in your credentials below</p>
+    </div>
+
+    <form method="POST" action="/register">
+      <div class="mb-3">
+        <label class="form-label">Email</label>
+        <input type="email" class="form-control" name="email" required>
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label">Password</label>
+        <input type="password" class="form-control" name="password" required>
+      </div>
+      <div class="d-flex justify-content-between mt-3">
+        <a href="#" class="small">Forgot password?</a>
+        <a class="btn btn-primary"  href="#" role="button">Login</a>
+      </div>
+   </form>
+
+  </div>
+</div>
 {{ end }}
 
-{{ template "layout" . }}
+{{ template "body" . }}
