Add a debug capability

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,9 +12,9 @@
   />
 
   <!-- App CSS -->
-  <link rel="stylesheet" href="style.css"
+  <!-- <link rel="stylesheet" href="/static/style.css"
     rel="stylesheet"
-  />
+  /> -->
   <!-- Bootstrap Icons -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
